# Cpp_demo

./: .gitignore  README.md
demo_1/: CMakeLists.txt
demo_1/doc/: hello.txt
demo_2/lib/: CMakeLists.txt  hello.cpp  hello.h
demo_3/: CMakeLists.txt
demo_3/src/: CMakeLists.txt  main.cpp
demo_4/: CMakeLists.txt
demo_4/src/: CMakeLists.txt  main.cpp
